[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvefeed-mcp"
version = "0.2.0"
description = "Model Context Protocol (MCP) server for the CVEFeed.io vulnerability intelligence API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "CVEFeed.io", email = "hey@cvefeed.io" },
]
keywords = ["mcp", "model-context-protocol", "cve", "vulnerability", "cvefeed"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.scripts]
cvefeed-mcp = "cvefeed_mcp.__main__:main"

[project.urls]
Homepage = "https://cvefeed.io/"
Documentation = "https://cvefeed.io/api/docs/"
Repository = "https://github.com/cvefeed/cvefeed-mcp"
Issues = "https://github.com/cvefeed/cvefeed-mcp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["cvefeed_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
